force-app/main/default/objects/WOHI_Collaborator_Visit__c/WOHI_Collaborator_Visit__c.object-meta.xml
<CustomObject>
    <label>WOHI-Collaborator Visit</label>
    <nameField>
        <displayFormat>V-{000}</displayFormat>
        <label>WOHI-Collaborator Visit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WOHI-Collaborator Visit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>