force-app/main/default/objects/WOHI_Collaborator_Visit__c/fields/Duration_of_visit_in_months__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_visit_in_months__c</fullName>
    <label>Duration of visit in months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>