force-app/main/default/objects/WOHI_Collaborator_Visit__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Visit date during year of Fellowship</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>