force-app/main/default/objects/WOHI_Collaborator_Visit__c/fields/Travel_type__c.field-meta.xml
<CustomField>
    <fullName>Travel_type__c</fullName>
    <label>Travel type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>