force-app/main/default/objects/WOHI_Collaborator_Visit__c/fields/Visit_is_related_to_Aim_Objective_No__c.field-meta.xml
<CustomField>
    <fullName>Visit_is_related_to_Aim_Objective_No__c</fullName>
    <label>Visit is related to Aim/Objective No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>