force-app/main/default/objects/WOHI_Collaborator_Visit__c/fields/WOHI_Collaboration__c.field-meta.xml
<CustomField>
    <fullName>WOHI_Collaboration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WOHI-Collaboration</label>
    <referenceTo>WOHI_Collaboration__c</referenceTo>
    <relationshipLabel>WOHI-Collaborator Visit</relationshipLabel>
    <relationshipName>WOHI_Collaborator_Visit</relationshipName>
    <type>Lookup</type>
</CustomField>