force-app/main/default/objects/WOHI_Collaborator_Visit__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Year 1</fullName>
            </value>
            <value>
                <fullName>Year 2</fullName>
            </value>
            <value>
                <fullName>Year 3</fullName>
            </value>
            <value>
                <fullName>Year 4</fullName>
            </value>
            <value>
                <fullName>Year 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>